# ChessEngine

./: .gitignore  BUILD.txt  README.md
engine/: CMakeLists.txt
engine/include/: Bot.hpp  Engine.hpp
engine/include/board/: Board.hpp  BoardEnums.hpp  BoardUtil.hpp  Move.hpp  MoveGenerator.hpp
engine/include/board/MoveGeneration/: BitboardMoveGenerator.hpp  BitboardMoveSerialiser.hpp  MoveGenerator.hpp  MoveGeneratorInternals.hpp  TargetBitboardGenerator.hpp
engine/include/board/moveGeneration/: MoveGenerator.hpp
engine/include/bot/: Bot.hpp  BotUtil.hpp  PrincipalVariation.hpp
engine/include/evaluation/: Pesto.hpp
engine/include/moveGeneration/: MoveGenerator.hpp
engine/resources/: ficsgamesdb_2023_titled_nomovetimes_104852.epd  hybrid_book_beta.epd  opening_book_10_moves.epd  opening_book_14_moves.epd  opening_book_6_moves.epd  opening_book_9_moves.epd
engine/src/: Bot.cpp  Engine.cpp  Main.cpp
engine/src/board/: Board.cpp  BoardEnums.cpp  BoardUtil.cpp  Move.cpp  MoveGenerator.cpp
engine/src/board/MoveGeneration/: BitboardMoveGenerator.cpp  BitboardMoveSerialiser.cpp  MoveGenerator.cpp  SquareTargeted.cpp  TargetBitboardGenerator.cpp
engine/src/board/moveGeneration/: BitboardMoveGenerator.cpp  MoveGenerator.cpp
engine/src/board/moveGeneration/Internals/: SquareTargeted.cpp  (+2 more)
engine/src/bot/: Bot.cpp  BotUtil.cpp  Eval.cpp  PrincipalVariation.cpp
engine/src/evaluation/: Pesto.cpp
engine/src/moveGeneration/: MoveGenerator.cpp
engine/src/moveGeneration/internals/: BitboardMoveGenerator.cpp  BitboardMoveSerialiser.cpp  SquareTargeted.cpp
(+42 files in other folders)
